# DotenvCpp

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  README.md  create-cert.ps1  create-cert.sh
cmake/: DotenvCppConfig.cmake.in
docs/: _config.yml  index.html
src/: dotenv.cpp  dotenv.hpp
tests/: test_dotenv.cpp
